BaseServices/overlays/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackr-ingress
  namespace: admin
spec:
  ingressClassName: nginx
  rules:
  - host: api.<YOUR_TAILSCALE_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-api-svc
            port:
              number: 8000
  - host: keycloak.<YOUR_TAILSCALE_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  - host: gitlab.<YOUR_TAILSCALE_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
  - host: vault.<YOUR_TAILSCALE_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openbao-svc
            port:
              number: 8200
